Potentially fixed the résumé being unreadable in dark mode

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -194,7 +194,7 @@ main {
 /* Grids */
 .equal-column-grid {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr);
 }
 
 .grid-cell {
